--- a/index.html
+++ b/index.html
@@ -11,36 +11,34 @@
 </head>
 
 <body>
-    <div class="sticky">
-        <div class="bg-yellow-50">
-            <nav class="flex justify-between w-11/12 md:w-7/12 items-center m-auto py-8">
-                <div>
-                    <button
-                        class="text-2xl border-none px-8 py-4 text-center font-bold rounded-xl bg-lime-400">Blog</button>
-                </div>
-                <div class="flex items-center">
-                    <img src="/assets/logo.png" alt="">
-                    <h2 class="ml-4 font-bold text-3xl">Donate Bangladesh</h2>
-                </div>
-                <div class="flex">
-                    <img src="/assets/coin.png" alt="">
-                    <h2 class="font-bold text-2xl ml-3">5500</h2>
-                    <h2 class="font-bold text-2xl ml-1">BDT</h2>
-                </div>
-            </nav>
-        </div>
-        <div class="flex w-7/12 justify-center items-center m-auto py-8 gap-5">
-            <button class="text-2xl px-10 py-5 bg-gray-200 rounded-xl font-bold">Donation</button>
-            <button class="text-2xl px-10 py-5 bg-gray-200 rounded-xl font-bold">History</button>
-        </div>
+    <div class="bg-yellow-50">
+        <nav class="flex justify-between w-7/12 items-center m-auto py-8">
+            <div>
+                <button
+                    class="text-2xl border-none px-8 py-4 text-center font-bold rounded-xl bg-lime-400">Blog</button>
+            </div>
+            <div class="flex items-center">
+                <img src="./assets/logo.png" alt="">
+                <h2 class="ml-4 font-bold text-3xl">Donate Bangladesh</h2>
+            </div>
+            <div class="flex">
+                <img src="./assets/coin.png" alt="">
+                <h2 class="font-bold text-2xl ml-3">5500</h2>
+                <h2 class="font-bold text-2xl ml-1">BDT</h2>
+            </div>
+        </nav>
+    </div>
+    <div class="flex w-7/12 justify-center items-center m-auto py-8 gap-5">
+        <button class="text-2xl px-10 py-5 bg-gray-200 rounded-xl font-bold">Donation</button>
+        <button class="text-2xl px-10 py-5 bg-gray-200 rounded-xl font-bold">History</button>
     </div>
     <section>
-        <div class="justify-center w-11/12 md:w-7/12 items-center m-auto px-2 py-6 md:px-8 md:py-8">
-            <div class="flex flex-col md:flex-row gap-10">
-                <img class="w-full" src="/assets/noakhali.png" alt="">
-                <div>
+        <div class="justify-center w-11/12 md:w-7/12 items-center m-auto">
+            <div class="grid grid-cols-1 md:grid-cols-5 gap-10">
+                <img class="w-full md:col-span-2" src="./assets/noakhali.png" alt="">
+                <div class="md:col-span-3">
                     <button class="flex bg-gray-200 px-6 py-5 rounded-xl">
-                        <img src="/assets/coin.png" alt="">
+                        <img src="./assets/coin.png" alt="">
                         <h2 class="font-bold text-xl ml-3">00</h2>
                         <h2 class="font-bold text-xl ml-1">BDT</h2>
                     </button>
@@ -52,7 +50,7 @@
                     <input class="px-3 py-4 border-2 border-gray-200 rounded-lg w-full my-5"
                         placeholder="Write Donation Amount" type="text">
                     <br>
-                    <button class="w-full justify-center bg-lime-400 py-5 font-bold text-2xl rounded-xl">Donate
+                    <button class="btn flex w-full justify-center items-center bg-lime-400 font-bold text-2xl rounded-xl">Donate
                         Now</button>
                 </div>
             </div>
