--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </div>
     </div>
     <section class="grid grid-cols-1 gap-8 py-8 md:pt-96 lg:pt-64 md:py-20">
-        <div class="justify-center w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div class="justify-center w-11/12 md:w-7/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
-                <img class="w-full md:col-span-2 h-full" src="./assets/noakhali.png" alt="">
+                <img class="w-full md:col-span-2 h-fit" src="./assets/noakhali.png" alt="">
 
                 <div class="md:col-span-3">
                     <button class="flex bg-gray-200 px-6 py-5 rounded-xl">
@@ -61,9 +61,9 @@
                 </div>
             </div>
         </div>
-        <div class="justify-center w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div class="justify-center w-11/12 md:w-7/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
-                <img class="w-full md:col-span-2 h-full" src="./assets/noakhali.png" alt="">
+                <img class="w-full md:col-span-2 h-fit" src="./assets/feni.png" alt="">
 
                 <div class="md:col-span-3">
                     <button class="flex bg-gray-200 px-6 py-5 rounded-xl">
@@ -87,14 +87,14 @@
                 </div>
             </div>
         </div>
-        <div class="justify-center w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div class="justify-center w-11/12 md:w-7/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
-                <img class="w-full md:col-span-2 h-full" src="./assets/noakhali.png" alt="">
+                <img class="w-full md:col-span-2" src="./assets/quota-protest.png" alt="">
 
                 <div class="md:col-span-3">
                     <button class="flex bg-gray-200 px-6 py-5 rounded-xl">
                         <img src="./assets/coin.png" alt="">
-                        <h2 class="font-bold text-lg md:text-xl ml-3">00</h2>
+                        <h2 class="font-bold text-lg md:text-xl ml-3">2400</h2>
                         <h2 class="font-bold text-lg md:text-xl ml-1">BDT</h2>
                     </button>
                     <h2 class="font-bold text-xl md:text-3xl pt-4">Aid for Injured in the Quota Movement</h2>
