--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <div class="md:fixed top-0 w-full">
         <div class="bg-yellow-50">
             <nav
-                class="flex flex-col gap-5 lg:flex-row w-11/12 md:w-7/12 justify-center md:justify-between items-center m-auto py-8">
+                class="flex flex-col gap-5 lg:flex-row w-11/12 md:w-8/12 justify-center md:justify-between items-center m-auto py-8">
                 <div>
                     <button id="blog-btn" class="btn text-xl md:text-2xl border-none px-8 text-center font-bold rounded-xl bg-lime-400">Blog</button>
                 </div>
@@ -24,14 +24,10 @@
                 </div>
                 <div class="flex">
                     <img src="./assets/coin.png" alt="">
-                    <h2 class="font-bold text-xl md:text-2xl ml-3">5500</h2>
+                    <h2 id="current-balance" class="font-bold text-xl md:text-2xl ml-3">5500</h2>
                     <h2 class="font-bold text-xl md:text-2xl ml-1">BDT</h2>
                 </div>
             </nav>
-        </div>
-        <div class="flex justify-center items-center backdrop-blur-3xl m-auto py-8 gap-5">
-            <button id="donate-btn" class="btn text-2xl  bg-lime-400 rounded-xl font-bold">Donation</button>
-            <button id="history-btn" class="btn text-2xl  rounded-xl font-bold">History</button>
         </div>
     </div>
     <section class="bg-gray-100">
