--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="md:fixed top-0 w-full">
+    <div class="sticky top-0 w-full">
         <div class="bg-yellow-50">
             <nav
                 class="flex flex-col gap-5 lg:flex-row w-11/12 md:w-8/12 justify-center md:justify-between items-center m-auto py-8">
@@ -47,10 +47,10 @@
             </div>
         </div>
     </section>
-    <section id="donate-section" class="grid grid-cols-1 gap-8 py-8 md:pt-96 lg:pt-64 md:py-20">
-        <div class="justify-center w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
-            <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
-                <img class="w-full md:col-span-2 h-fit" src="./assets/noakhali.png" alt="">
+    <section id="donate-section" class="grid grid-cols-1 gap-8 py-8 md:py-20">
+        <div class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+            <div class="grid lg:grid-cols-5 gap-5 md:gap-10">
+                <img class="w-full md:col-span-2" src="./assets/noakhali.png" alt="">
 
                 <div class="md:col-span-3">
                     <button class="flex bg-gray-200 px-6 py-5 rounded-xl">
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <div class="justify-center w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
                 <img class="w-full md:col-span-2 h-fit" src="./assets/feni.png" alt="">
 
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </div>
-        <div class="justify-center w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
                 <img class="w-full md:col-span-2" src="./assets/quota-protest.png" alt="">
 
@@ -123,11 +123,11 @@
             </div>
         </div>
     </section>
-    <div id="transaction-section" class="w-8/12 m-auto">
+    <div id="transaction-section" class="hidden w-8/12 m-auto">
         <h1 class="text-2xl text-center font-bold py-4">Transaction History</h1>
-        <div id="transaction-container"></div>
+        <div id="transaction-container" class="grid grid-cols-1 lg:grid-cols-2 gap-4"></div>
     </div>
-    <footer>
+    <footer class="bottom-0">
         <div class="bg-yellow-50 h-24"></div>
     </footer>
     <script src="./js/index.js"></script>
