--- a/home.html
+++ b/home.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
-    <div class="md:fixed top-0 w-full">
+    <div class="sticky top-0 w-full">
         <div class="bg-yellow-50">
             <nav
                 class="flex flex-col gap-5 lg:flex-row w-11/12 md:w-8/12 justify-center md:justify-between items-center m-auto py-8">
                 <div>
-                    <button id="blog-btn" class="btn text-xl md:text-2xl border-none px-8 text-center font-bold rounded-xl bg-lime-400">Blog</button>
+                    <button id="blog-btn"
+                        class="btn text-xl md:text-2xl border-none px-8 text-center font-bold rounded-xl bg-lime-400">Blog</button>
                 </div>
                 <div id="donate-logo" class="flex items-center">
                     <img src="./assets/logo.png" alt="">
