--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <nav
                 class="flex flex-col gap-5 lg:flex-row w-11/12 md:w-8/12 justify-center md:justify-between items-center m-auto py-8">
                 <div>
-                    <button id="blog-btn" class="btn text-xl md:text-2xl border-none px-8 text-center font-bold rounded-xl bg-lime-400">Blog</button>
+                    <button id="blog-btn"
+                        class="btn text-xl md:text-2xl border-none px-8 text-center font-bold rounded-xl bg-lime-400">Blog</button>
                 </div>
                 <div id="donate-logo" class="flex items-center">
                     <img src="./assets/logo.png" alt="">
@@ -36,7 +37,7 @@
     </div>
     <section id="congrats-btn" class="hidden absolute left-1/2 mt-96">
         <div class=" fixed rounded-xl bg-yellow-50 px-16 py-8 justify-center items-center m-auto shadow-sm">
-            <h2 class="text-center text-4xl font-bold" >Congrats!</h2>
+            <h2 class="text-center text-4xl font-bold">Congrats!</h2>
             <div class="flex justify-center my-4">
                 <img src="./assets/coin.png" alt="">
             </div>
@@ -48,7 +49,8 @@
         </div>
     </section>
     <section id="donate-section" class="grid grid-cols-1 gap-8 py-8 md:py-20">
-        <div class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div
+            class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid lg:grid-cols-5 gap-5 md:gap-10">
                 <img class="w-full md:col-span-2" src="./assets/noakhali.png" alt="">
 
@@ -67,11 +69,14 @@
                     <input id="noakhali-input" class="px-3 py-4 border-2 border-gray-200 rounded-lg w-full my-4"
                         placeholder="Write Donation Amount" type="text">
                     <br>
-                    <button id="noakhali-btn" class="btn flex w-full justify-center items-center bg-lime-400 font-bold text-2xl rounded-xl">Donate Now <button>
+                    <button id="noakhali-btn"
+                        class="btn flex w-full justify-center items-center bg-lime-400 font-bold text-2xl rounded-xl">Donate
+                        Now <button>
                 </div>
             </div>
         </div>
-        <div class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div
+            class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
                 <img class="w-full md:col-span-2 h-fit" src="./assets/feni.png" alt="">
 
@@ -91,12 +96,14 @@
                     <input id="feni-input" class="px-3 py-4 border-2 border-gray-200 rounded-lg w-full my-4"
                         placeholder="Write Donation Amount" type="text">
                     <br>
-                    <button id="feni-btn" class="btn flex w-full justify-center items-center bg-lime-400 font-bold text-2xl rounded-xl">Donate
+                    <button id="feni-btn"
+                        class="btn flex w-full justify-center items-center bg-lime-400 font-bold text-2xl rounded-xl">Donate
                         Now</button>
                 </div>
             </div>
         </div>
-        <div class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
+        <div
+            class="justify-center shadow-md w-11/12 md:w-8/12 items-center m-auto p-4 md:p-8 border-gray-200 border-solid border-2 rounded-2xl">
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 md:gap-10">
                 <img class="w-full md:col-span-2" src="./assets/quota-protest.png" alt="">
 
@@ -117,7 +124,8 @@
                     <input id="quota-input" class="px-3 py-4 border-2 border-gray-200 rounded-lg w-full my-4"
                         placeholder="Write Donation Amount" type="text">
                     <br>
-                    <button id="quota-btn" class="btn flex w-full justify-center items-center bg-lime-400 font-bold text-2xl rounded-xl">Donate
+                    <button id="quota-btn"
+                        class="btn flex w-full justify-center items-center bg-lime-400 font-bold text-2xl rounded-xl">Donate
                         Now</button>
                 </div>
             </div>
