--- a/home.html
+++ b/home.html
@@ -31,12 +31,8 @@
             </nav>
         </div>
     </div>
-    <section class="bg-gray-100">
-        <div class="w-11/12 lg:max-w-7xl m-auto py-16">
-            <div class="btn bg-gray-200 flex gap-2 max-w-72 h-full items-center justify-center rounded-full m-auto">
-                <i class="fa-solid fa-arrow-right"></i>
-                <h3 class="font-bold text-lg">FAQ</h3>
-            </div>
+    <section>
+        <div class="w-11/12 lg:max-w-7xl m-auto py-10">
             <h1 class="text-2xl md:text-4xl lg:text-5xl text-center font-bold my-5" style="-webkit-text-stroke: 1px;">
                 Your FAQ
             </h1>
@@ -50,46 +46,31 @@
                 <div class="grid grid-cols-1 gap-4">
                     <div class="collapse collapse-arrow bg-base-200">
                         <input type="radio" name="my-accordion-2" checked="checked" />
-                        <div class="collapse-title text-xl font-medium">What is flood?</div>
+                        <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
                         <div class="collapse-content">
-                            <p> Rushing water, moving with inertia and a force unparalleled by any machinations of man,
-                                it’s difficult to comprehend the sheer power of a disaster like this. Floods are the
-                                natural disaster that can literally force homes off of their foundations and push them
-                                across the ground. Such events can cause immense harm, destroying anything and
-                                everything in their path. Of all the natural disasters, these ones also exert the
-                                greatest cost in human life. The two worst natural disasters in recorded history were
-                                both floods.</p>
+                            <p> What is the DOM? The Document Object Model (DOM) is a programming interface for web documents. It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects; that way, programming languages can interact with the page.</p>
                         </div>
                     </div>
                     <div class="collapse collapse-arrow bg-base-200">
                         <input type="radio" name="my-accordion-2" />
-                        <div class="collapse-title text-xl font-medium">What does Flood Zone AE mean?</div>
+                        <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
                         <div class="collapse-content">
-                            <p>The various types of water risk zones are given specific designations to differentiate
-                                them. These designations also determine whether or not homeowners will need to purchase
-                                insurance as a part of their mortgage. According to one resource, “AE flood zones are
-                                areas that present a 26% chance over the life of a 30-year mortgage, according to FEMA.
-                                Since these areas are prone to flooding, homeowners with mortgages from federally
-                                regulated lenders are required to purchase flood insurance through the NFIP.”</p>
+                            <p>The getElementById() method of the Document interface returns an Element object representing the element whose id property matches the specified string. Since element IDs are required to be unique if specified, they're a useful way to get access to a specific element quickly.</p>
                         </div>
                     </div>
                     <div class="collapse collapse-arrow bg-base-200">
                         <input type="radio" name="my-accordion-2" />
-                        <div class="collapse-title text-xl font-medium">What is happening at the quota-reform protests
-                            in Bangladesh?</div>
+                        <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?</div>
                         <div class="collapse-content">
-                            <p>On 15 July 2024, students of Dhaka University were sitting with placards and flags in a
-                                peaceful protest calling for reforms on the quota allocation for government jobs in
-                                Bangladesh. Suddenly, they were attacked by individuals armed with rods, sticks and
-                                clubs with a few even brandishing revolvers. Within hours, a pattern emerged across the
-                                country with similar attacks coordinated by people believed to be members of the
-                                Bangladesh Chatra League (BCL), a group affiliated with the ruling Awami League (AL),
-                                against student protesters.
-                                <br>
-
-                                By the afternoon of 16 July, police fired tear gas and charged with batons drawn at
-                                protesters in front of Begum Rokeya University in the north-western city of Rangpur
-                                where students had gathered, led by the protest coordinator Abu Sayed among others.
+                            <p>Event delegation refers to the process of using event propagation (bubbling) to handle events at a higher level in the DOM than the element on which the event originated. It allows us to attach a single event listener for elements that exist now or in the future.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
+                        <div class="collapse-content">
+                            <p>Changing an element's style (CSS) attributes is one of the ways in which the DOM can be used. For example, in the code below, the onfocus event handler method is used to change the input element's style when the user clicks inside it. When this event occurs, the element's background color will change to purple.
                             </p>
                         </div>
                     </div>
